<resources>
    <string name="app_name">throwIT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="de_btn_login">Anmelden</string>
    <string name="de_btn_register">Registrieren</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="de_btn_start">Wurf starten!</string>
    <string name="lbl_height">Höhe:</string>
    <string name="lbl_count">0</string>
    <string name="lvl_measure">m</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_name">Name</string>
    <string name="title_activity_temp">Temp</string>
    <string name="Register_txt">Account erstellen</string>
    <string name="desc_herausf">Begebe Dich auf eine Höhe von 200m über dem Meeresspiegel und erreiche einen Wurf von 5m.</string>
</resources>
